# yabinero

./: Cargo.toml  Cargo.toml.windows  L10N-HOWTO  L10N-HOWTO.md  README.md  WINDOWS_BUILD.md  yabinero.bat  yabinero.spec
for_rpm/: fltk-fix-name-of-lib-dir.patch
locale/fr/LC_MESSAGES/: yabinero.mo
po/: yabinero.pot  yabinero_fr.po
src/: difficulty.rs  engine.rs  enums.rs  gui.rs  main.rs  size.rs  value.rs
src/engine/: grid.rs  history.rs  mod.rs
src/gui/: changing.rs  grid.rs  menu.rs  mod.rs  sound.rs  timer.rs  user_data.rs
