[package]
name = "yabinero"
version = "1.52.0"
authors = ["Nicolas Salguero <nicolas.salguero@laposte.net>"]
homepage = "https://github.com/nsalguero/yabinero"
repository = "https://github.com/nsalguero/yabinero"
edition = "2018"
license = "GPL-3.0+"

[dependencies]
locale_config = "^0.3"
fltk = "^1.3"
rand = "^0.8"
rodio = "^0.15"
preferences = "^1.1"
gettext = "^0.4"
tr = { version = "^0.1", features = ["gettext"], default-features = false }
enum-iterator = "^0.7"
chrono = "^0.4"
lazy_static = "^1.4"
regex = "^1"
