[package]
name = "yabinero"
version = "1.69.0"
authors = ["Nicolas Salguero <nicolas.salguero@laposte.net>"]
homepage = "https://github.com/nsalguero/yabinero"
repository = "https://github.com/nsalguero/yabinero"
edition = "2021"
license = "GPL-3.0+"

[dependencies]
locale_config = "^0.3"
fltk = "^1.5"
rand = "^0.9"
rodio = "^0.20"
preferences = "^2"
gettext = "^0.4"
tr = { version = "^0.1", features = ["gettext"], default-features = false }
enum-iterator = "^2"
chrono = "^0.4"
lazy_static = "^1.5"
regex = "^1"
